# gallery-detection

./: .gitignore  README.md  setup.cfg
gallery_detection_dataset_generation/scripts/: create_dataset.py  explore_dataset.py  generate_dataset.py  generate_environments.py  world_to_scene.py
gallery_detection_python/: pyproject.toml  setup.cfg
gallery_detection_python/scripts/: train.py  train_nn.ipynb
gallery_detection_python/scripts/paper_scripts/: input_output_img.py  node.py
gallery_detection_python/src/gallery_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gallery_detection_python/src/gallery_detection_models/: models.py
gallery_detection_ros/: CMakeLists.txt  package.xml
gallery_detection_ros/launch/: gallery_detection.launch
gallery_detection_ros/msg/: DetectedGalleries.msg  DetectionVector.msg  DetectionVectorStability.msg
gallery_detection_ros/nodes/: gallery_detection_model_node.py  output_filtering_node.py  prediction_stability_node.py
